# Prompt2Ship

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
.agents/skills/testing-prompt2ship/: SKILL.md
.agents/skills/testing-prompt2ship-ui/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: github.py
backend/app/github/: client.py  contracts.py  errors.py  models.py  scoring.py
backend/scripts/: render_refresh_delta.py
backend/tests/: test_github_api.py  test_github_clients.py  test_github_contracts.py  test_github_scoring.py  test_health.py
docs/: deployment.md  design.md
frontend/: .env.example  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api-status/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/leaderboard/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/u/[username]/: page.tsx
frontend/components/: avatar.tsx  connect-github-button.tsx  hero-dashboard.tsx  leaderboard-preview.tsx  leaderboard-row.tsx  scan-client.tsx  score-card.tsx  site-header.tsx
frontend/components/ui/: button.tsx
frontend/lib/: data.ts  mock-data.ts  types.ts  utils.ts
frontend/lib/supabase/: server.ts
src/app/: globals.css  layout.tsx  page.tsx
supabase/: README.md
supabase/migrations/: 20260625050200_phase1_foundation.sql
