[project]
name = "prompt2ship-backend"
version = "0.1.0"
description = "FastAPI backend for Prompt2Ship"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
